src/objects/Naturaleza__mdt.object
<CustomObject>
    <fields>
        <fullName>MTD_NAT_TXT_Identificador__c</fullName>
        <label>Identificador</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_NAT_TXT_Naturaleza_HS__c</fullName>
        <label>Naturaleza HS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MTD_NAT_TXT_Naturaleza_cia__c</fullName>
        <label>Naturaleza cia</label>
        <type>TextArea</type>
    </fields>
    <label>Naturaleza cia</label>
    <pluralLabel>Naturaleza cia</pluralLabel>
</CustomObject>